grafana_prometheus/overlays/development/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: dashboard
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
    alb.ingress.kubernetes.io/target-group-attributes: deregistration_delay.timeout_seconds=15
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/security-groups: alb-protected-sg
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/success-codes: 200,302
    external-dns.alpha.kubernetes.io/hostname: grafana.your-domain.com, prometheus-server.your-domain.com, prometheus-alertmanager.your-domain.com
  labels:
    app: monitoring
spec:
  rules:
    - host: grafana.your-domain.com
      http:
        paths:
          - backend:
              serviceName: grafana
              servicePort: 80
    - host: prometheus-server.your-domain.com
      http:
        paths:
          - backend:
              serviceName: prometheus-server
              servicePort: 80
    - host: prometheus-alertmanager.your-domain.com
      http:
        paths:
          - backend:
              serviceName: prometheus-alertmanager
              servicePort: 80
